cart badge,header sticky functionality, spacing issues,

--- a/src/components/ProductListing/ProductListing.module.css
+++ b/src/components/ProductListing/ProductListing.module.css
@@ -1,5 +1,5 @@
 .ProductListing {
-  padding: 70px 0;
+  padding: 170px 0 70px;
 }
 .ProductListingTop {
   max-width: 700px;
