--- a/src/components/cart/cart.module.css
+++ b/src/components/cart/cart.module.css
@@ -16,7 +16,7 @@ p {
   padding: 0px 55px;
   box-sizing: border-box;
   color: #201f1f;
-  padding: 40px 0px;
+  padding: 200px 0px 80px;
 }
 .tableHeader {
   margin-bottom: 1.7rem;
